--- a/upload/admin/view/template/common/filemanager.twig
+++ b/upload/admin/view/template/common/filemanager.twig
@@ -51,6 +51,10 @@
   </div>
 </div>
 <script type="text/javascript"><!--
+
+$('#modal-image').attr('onclick','').unbind('click');
+$('#modal-image').attr('keydown','').unbind('keydown');
+
 $('#modal-image').on('click', '#button-parent', function(e) {
 	e.preventDefault();
 
